RESOLVED FIXED303960
Address compiler warning in wtf/text/StringConcatenate.h
https://bugs.webkit.org/show_bug.cgi?id=303960
Summary Address compiler warning in wtf/text/StringConcatenate.h
Chris Dumez
Reported 2025-12-10 17:33:24 PST
Address compiler warning in wtf/text/StringConcatenate.h: ``` wtf/text/StringConcatenate.h:563:9: warning: Forwarding reference passed to std::move(), which may unexpectedly cause lvalues to be moved; use std::forward() instead [bugprone-move-forwarding-reference] 563 | WTFMove(each), | ^ ```
Attachments
Chris Dumez
Comment 1 2025-12-10 17:35:06 PST
EWS
Comment 2 2025-12-11 16:58:41 PST
Committed 304330@main (8d7c3100dc6b): <https://commits.webkit.org/304330@main> Reviewed commits have been landed. Closing PR #55214 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-12-11 16:59:14 PST
Note You need to log in before you can comment on or make changes to this bug.