Address compiler warning in wtf/text/StringConcatenate.h https://bugs.webkit.org/show_bug.cgi?id=303960

Reviewed by Darin Adler, Sam Weinig, and Richard Robinson.

* Source/WTF/wtf/text/StringConcatenate.h:
(WTF::std::invocable<decltype):
(WTF::decltype):

Canonical link: https://commits.webkit.org/304330@main